[project]
name = "booking"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic==1.15.2",
    "asyncpg==0.30.0",
    "fastapi==0.115.12",
    "pydantic==2.11.3",
    "pydantic-settings==2.8.1",
    "pytest==8.3.5",
    "pytest-asyncio==0.26.0",
    "sqlalchemy[asyncio]==2.0.40",
    "uvicorn==0.34.0",
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

